testdata/golden/sema/invalid/copy_attr/copy_non_copy_field.sg
// scenario: @copy type with non-Copy field should error
@copy
type BadConfig = { name: string }  // ERROR: string is not Copy
